crates/aranya-policy-compiler/tests/data/match_stmt/duplicate_arm_already_defined_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: duplicate match patterns found
   |
14 |         5 => {
   |         - first defined here
...
20 |         5 => {
   |         ^ duplicate pattern
